# Project_techno_L2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  add_edge.c  add_edge.h  default.txt  game.c  game.h  game11.txt  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_failed1.txt  game_random.c  game_sdl.c  game_solve.c  game_struct.h  game_test_echaal.c  game_test_ldrion.c  game_test_trdo.c  game_text.c  game_tools.c  game_tools.h  model.c  model.h  niko.txt  queue.c  queue.h
web/: demo.js  game.html  game.js  game.wasm  style.css  wrapper.c
